# ros-images-extractor

./: CMakeLists.txt  Dockerfile  README.md  build.sh
.github/workflows/: build-linux.yml
include/: cli_parser.h  extractor.h
src/: cli_parser.cpp  extractor.cpp  main.cpp
